utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/IncludeExcludedParent.ide
package valid

ide IncludeExcludedParent extends IncludeExcludedGrandParent {
    registry "https://hub.docker.com/some/awesome/image:latest"
    build "some/amazing/path" resolved from ROOT

    include module type IncludeExcludedModule2
}
